2008-07-23  Carlos Garnacho  <carlos@imendio.com>

	Check that a service exists before inserting it again in the database.

	* src/tracker-indexer/tracker-indexer-db.[ch]
	(get_dirname_and_basename): New helper function.
	(tracker_db_check_service): New function, returns the ID for the
	service (if any).
	* src/tracker-indexer/tracker-indexer.c (process_file): Check that the
	service doesn't exist before trying to index it.

2008-07-23  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/applications.c:
	* src/tracker-indexer/modules/evolution.c:
	* src/tracker-indexer/modules/files.c:
	* src/tracker-indexer/tracker-indexer.c: Revert the "use TrackerField
	as metadata keys" patch, it's incomplete at the moment and adds extra
	lookup overhead. Probably a TrackerMetadata simple object to collect
	data and do some caching would be the best option.

2008-07-23  Martyn Russell  <martyn@imendio.com>

	* data/dbus/tracker-indexer.xml: 
	* src/tracker-indexer/tracker-indexer.[ch]: Changed _set_paused()
	API to have _pause(), _continue() and _pause_for_duration().
	
	* src/libtracker-common/tracker-dbus.[ch]: 
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-dbus.[ch]: 
	* src/trackerd/tracker-files.c:
	* src/trackerd/tracker-keywords.c:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-search.c:
	* src/trackerd/tracker-xesam.c: Completely rework Phillip's patch
	to pause the indexer when daemon requests come in. Instead of
	littering the DBus code with pause/continue calls, we add a
	hook to the DBus request_new() and request_{success|failed)()
	functions so we know when a request starts and ends. We then
	simply pause the indexer and wait for at least 10 seconds of
	DBus request inactivity before allowing the indexer to continue as
	normal. 

	* src/trackerd/tracker-main.c: Used the new _pause_for_duration()
	API when shutting down because sometimes the daemon has to wait
	because the indexer has the lock on the database.
	